Anonymous | Login | 2021-01-23 10:56 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0030477 | Community | [OCCT] OCCT:Visualization | public | 2019-02-05 18:14 | 2019-03-05 13:46 | ||||
Reporter | martinc | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | Windows | OS | VC++ 2015 | OS Version | 32 bit | ||||
Product Version | [OCCT] 7.3.0 | ||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0030477: Visualization - crash in AIS_Manipulator::ObjectTransformation after using V3d_View::SetProj(V3d_Zpos) | ||||||||
Description | In AIS_Manipulator::ObjectTransformation, for case AIS_MM_Rotation, it declares 'IntAna_IntConicQuad aIntersector(...' then uses 'aIntersector.NbPoints() < 1' without first checking !IsParallel() which throws Standard_DomainError() which is not handled by a catch. | ||||||||
Steps To Reproduce | Use V3d_View::SetProj(V3d_Zpos) Create CPsxManipulator, allowing AIS_MM_Rotation Attach an AIS_InteractiveObject to CPsxManipulator On a mouse move call 'm_Manipulator->StartTransform(m_Xmin, m_Ymin, m_View)' | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | |||||||||
![]() |
|||||||
|
![]() |
|
(0082039) martinc (reporter) 2019-02-05 18:35 |
Only appears to be a problem when V3d_Viewer::SetDefaultTypeOfView(V3d_ORTHOGRAPHIC) is used and not if V3d_PERSPECTIVE is used. |
(0082040) martinc (reporter) 2019-02-05 19:13 |
Similar problem with the case for AIS_MM_Translation and Extrema_ExtElC::NbExt() which throws StdFail_InfiniteSolutions. |
(0082116) git (administrator) 2019-02-11 12:07 |
Branch CR30477 has been created by kgv. SHA-1: ff7664d7b58a0b4b5c5d9b4b5cf0105fa2a1d676 Detailed log of new commits: Author: kgv Date: Mon Feb 11 12:01:40 2019 +0300 0030477: Visualization - crash in AIS_Manipulator::ObjectTransformation after using V3d_View::SetProj(V3d_Zpos) |
(0082117) kgv (developer) 2019-02-11 12:08 |
Could you please provide a reproducer for Draw Harness? I don't experience any crash within the following script: pload MODELING VISUALIZATION box b 1 2 3 vclear; vinit View1; vtop vdisplay -dispMode 1 b;vfit vmanipulator m -attach b |
(0082154) martinc (reporter) 2019-02-12 13:32 |
The script you describe reproduces the problem every time on my 7.3.0 installation. Once the view is displayed, I position the cursor somewhere over the center of the red or green arrow. The arrow does not highlight as it is the rotational circle, that can not be seen, that is actually selected. When I press the left mouse button down and drag the mouse the DRAW harness immediately exits without warning. |
(0082156) kgv (developer) 2019-02-12 14:35 edited on: 2019-02-12 14:36 |
It is strange, that this doesn't happen in my environment, but OK. It would be nice, if you will be able checking patch in branch CR30477. Note that on current master behavior is also affected by patch 0030004, which disables detection of invisible disks altogether. |
(0082166) osa (developer) 2019-02-13 11:12 |
Branch CR30477 is reviewed without remarks. |
(0082179) apn (administrator) 2019-02-14 13:32 |
Combination - OCCT branch : CR30477 master SHA - ff7664d7b58a0b4b5c5d9b4b5cf0105fa2a1d676 7ed8668e4e52fbba7c47e571bf59f3e92b405869 Products branch : master SHA - 958a4e5e4b816adb6dba1a223ae557d1649e52b6 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16511.529999999966 / 16545.53999999999 [-0.21%] Products Total CPU difference: 9063.240000000036 / 9056.420000000013 [+0.08%] Windows-64-VC14: OCCT Total CPU difference: 17957.25 / 17918.46875 [+0.22%] Products Total CPU difference: 10437.34375 / 10465.109375 [-0.27%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0082636) git (administrator) 2019-03-05 13:46 |
Branch CR30477 has been deleted by kgv. SHA-1: ff7664d7b58a0b4b5c5d9b4b5cf0105fa2a1d676 |
![]() |
|||
occt: master 5ac0f989
Timestamp: 2019-02-11 09:01:40 Author: kgv Committer: apn [ Details ] [ Diff ] |
0030477: Visualization - crash in AIS_Manipulator::ObjectTransformation after using V3d_View::SetProj(V3d_Zpos) | ||
mod - src/AIS/AIS_Manipulator.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-02-05 18:14 | martinc | New Issue | |
2019-02-05 18:14 | martinc | Assigned To | => kgv |
2019-02-05 18:35 | martinc | Note Added: 0082039 | |
2019-02-05 19:13 | martinc | Note Added: 0082040 | |
2019-02-11 12:05 | kgv | Relationship added | related to 0030004 |
2019-02-11 12:05 | kgv | Severity | crash => minor |
2019-02-11 12:05 | kgv | Target Version | => 7.4.0 |
2019-02-11 12:05 | kgv | Summary | Crash in AIS_Manipulator::ObjectTransformation after using V3d_View::SetProj(V3d_Zpos) => Visualization - crash in AIS_Manipulator::ObjectTransformation after using V3d_View::SetProj(V3d_Zpos) |
2019-02-11 12:07 | git | Note Added: 0082116 | |
2019-02-11 12:08 | kgv | Note Added: 0082117 | |
2019-02-11 12:08 | kgv | Assigned To | kgv => martinc |
2019-02-11 12:08 | kgv | Status | new => feedback |
2019-02-11 12:09 | kgv | Resolution | open => unable to reproduce |
2019-02-12 13:32 | martinc | Note Added: 0082154 | |
2019-02-12 14:35 | kgv | Note Added: 0082156 | |
2019-02-12 14:35 | kgv | Assigned To | martinc => san |
2019-02-12 14:35 | kgv | Status | feedback => resolved |
2019-02-12 14:36 | kgv | Note Edited: 0082156 | View Revisions |
2019-02-13 10:00 | kgv | Assigned To | san => osa |
2019-02-13 11:12 | osa | Note Added: 0082166 | |
2019-02-13 11:12 | osa | Assigned To | osa => bugmaster |
2019-02-13 11:12 | osa | Status | resolved => reviewed |
2019-02-14 13:32 | apn | Test case number | => Not needed |
2019-02-14 13:32 | apn | Note Added: 0082179 | |
2019-02-14 13:32 | apn | Status | reviewed => tested |
2019-02-16 11:48 | apn | Changeset attached | => occt master 5ac0f989 |
2019-02-16 11:48 | apn | Assigned To | bugmaster => apn |
2019-02-16 11:48 | apn | Status | tested => verified |
2019-02-16 11:48 | apn | Resolution | unable to reproduce => fixed |
2019-03-05 13:46 | git | Note Added: 0082636 |
Copyright © 2000 - 2021 MantisBT Team |